--- a/.local/share/konsole/konsole-tabstyle.css
+++ b/.local/share/konsole/konsole-tabstyle.css
@@ -4,7 +4,7 @@ QTabWidget::pane > QWidget {
 
 QTabWidget::tab-bar {
   background-color: #090a10;
-  padding:5px;
+  padding:10px;
 }
 
 QTabBar::tab {
@@ -20,4 +20,6 @@ QTabBar::tab:hover {
   color: #70ce8e;
   font-family: Iosevka;
   font-size: 13px;
+  font-weight: bold
+}
 }
